log
Thu Apr 30 08:39:58 PM UTC 2026: 
 treemap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/60
252c41a
Mon May  4 02:17:01 AM UTC 2026: 
 treemap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:65:23: error: ‘TreeMap’ has no member named ‘left’
   65 |             aux = tree->left;
      |                       ^~
treemap.c:68:23: error: ‘TreeMap’ has no member named ‘right’
   68 |             aux = tree->right;
      |                       ^~
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
test.c:607: error: control reaches end of non-void function [-Werror=return-type]
test.c: At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
aef728c
Mon May  4 02:18:53 AM UTC 2026: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:65:23: error: ‘TreeMap’ has no member named ‘left’
   65 |             aux = tree->left;
      |                       ^~
treemap.c:68:23: error: ‘TreeMap’ has no member named ‘right’
   68 |             aux = tree->right;
      |                       ^~
1c36af1
Mon May  4 02:19:36 AM UTC 2026: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/60
38544f9
Mon May  4 02:28:03 AM UTC 2026: 
 treemap.c | 30 ++++++++++++++++++++++++++++++
 1 file changed, 30 insertions(+)
 tests:  13|5
total_score: 25/60
6796df7
Mon May  4 02:30:17 AM UTC 2026: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 25/60
1cfdf4a
Mon May  4 02:41:28 AM UTC 2026: 
 treemap.c | 29 +++++++++++++++++++++++++++++
 1 file changed, 29 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:167:26: error: implicit declaration of function ‘minimun’; did you mean ‘minimum’? [-Wimplicit-function-declaration]
  167 |         TreeNode * min = minimun(node->right);
      |                          ^~~~~~~
      |                          minimum
treemap.c:167:26: error: initialization of ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
266a65d
Mon May  4 02:41:54 AM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  18|3
total_score: 35/60
a682134
Mon May  4 02:45:49 AM UTC 2026: 
 treemap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:205:5: error: expected ‘,’ or ‘;’ before ‘return’
  205 |     return NULL;
      |     ^~~~~~
treemap.c:201:16: error: unused variable ‘aux’ [-Werror=unused-variable]
  201 |     TreeNode * aux = tree->current
      |                ^~~
treemap.c:206:1: error: control reaches end of non-void function [-Werror=return-type]
  206 | }
      | ^
cc1: all warnings being treated as errors
f3f0a65
Mon May  4 02:50:15 AM UTC 2026: 
 treemap.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:207:31: error: expected ‘,’ or ‘;’ before ‘:’ token
  207 |     TreeNode * p = aux->parent:
      |                               ^
6659242
Mon May  4 02:50:38 AM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  25|1
total_score: 50/60
b5990a4
